web-infras/parser/tests/fixtures/babel/es2017/async-functions/params-invalid-rest-trailing-comma/output.txt
[SyntaxError]: Unexpected trailing comma after rest element. (1,17)
1|async (...a,) => {};
 |               ^
